Added support for running tests on Java 17
A note will be added to the docs as well for this, but in a future PR as I'm reorganizing the docs in a separate PR right now.