@@ -43,6 +43,17 @@ test {
   environment "mlHost", mlHost
 }
 
+if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+  test {
+    // See https://stackoverflow.com/questions/72724816/running-unit-tests-with-spark-3-3-0-on-java-17-fails-with-illegalaccesserror-cl
+    // for an explanation of why these are needed when running the tests on Java 17.
+    jvmArgs = [
+      '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
+      '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED'
+    ]
+  }
+}
+
 shadowJar {
   // "all" is the default; no need for that in the connector filename.
   archiveClassifier.set("")
